--- a/package.json
+++ b/package.json
@@ -5,12 +5,20 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"update-cache": "node ./tools/update-cache"
 	},
 	"dependencies": {
+		"@azure/cosmos": "^3.9.2",
+		"@babel/core": "^7.12.3",
+		"@babel/preset-env": "^7.12.1",
+		"@babel/register": "^7.12.1",
 		"async-sema": "^3.1.0",
 		"cheerio": "^1.0.0-rc.3",
+		"core-js": "^3.6.5",
+		"dotenv": "^8.2.0",
 		"next": "^9.5.5",
+		"node-fetch": "^2.6.1",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"styled-components": "^5.2.0",
