--- a/.github/workflows/update-cache.yml
+++ b/.github/workflows/update-cache.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up node
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v2-beta
         with:
           node-version: '12'
         
