--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"build": "next build",
 		"start": "next start",
 		"format": "prettier --write .",
+		"lint": "eslint .",
 		"update-cache": "node ./tools/update-cache"
 	},
 	"dependencies": {
@@ -14,6 +15,7 @@
 		"@babel/preset-env": "^7.12.1",
 		"@babel/register": "^7.12.1",
 		"async-sema": "^3.1.0",
+		"babel-plugin-styled-components": "^1.11.1",
 		"cheerio": "^1.0.0-rc.3",
 		"core-js": "^3.6.5",
 		"dotenv": "^8.2.0",
@@ -25,7 +27,11 @@
 		"styled-system": "^5.1.5"
 	},
 	"devDependencies": {
-		"babel-plugin-styled-components": "^1.11.1",
+		"eslint": "^7.11.0",
+		"eslint-plugin-import": "^2.22.1",
+		"eslint-plugin-jsx-a11y": "^6.3.1",
+		"eslint-plugin-react": "^7.21.5",
+		"eslint-plugin-react-hooks": "^4.1.2",
 		"prettier": "^2.1.2"
 	},
 	"prettier": {
