--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"node-fetch": "^2.6.1",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
+		"react-is": "^17.0.0",
 		"styled-components": "^5.2.0",
 		"styled-system": "^5.1.5"
 	},
