--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"start": "next start",
 		"format": "prettier --write .",
 		"prelint": "prettier --check .",
-		"lint": "eslint .",
+		"lint": "next lint",
 		"update-cache": "node ./tools/update-cache"
 	},
 	"dependencies": {
@@ -30,6 +30,7 @@
 	},
 	"devDependencies": {
 		"eslint": "^7.15.0",
+		"eslint-config-next": "^11.0.1",
 		"eslint-plugin-import": "^2.22.1",
 		"eslint-plugin-jsx-a11y": "^6.4.1",
 		"eslint-plugin-react": "^7.21.5",
